[package]
name = "nx"
version = "0.1.0"
authors = ["XorTroll"]
edition = "2021"

[dependencies]
paste = "1.0"
logpacket = { path = "vendor/logpacket" }
linked_list_allocator = { path = "vendor/linked_list_allocator", default-features = false, features = ["const_mut_refs"] }
arrayvec = { path = "vendor/arrayvec", default-features = false, features = [] }
static_assertions = { path = "vendor/static_assertions" }
