[package]
name = "nx"
version = "0.1.0"
authors = ["XorTroll"]
edition = "2021"

[dependencies]
core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }

paste = "1.0"
logpacket = { path = "vendor/logpacket" }
linked_list_allocator = { path = "vendor/linked_list_allocator", default-features = false, features = ["const_mut_refs"] }
arrayvec = { path = "vendor/arrayvec", default-features = false, features = [] }
static_assertions = { path = "vendor/static_assertions" }


[features]
rustc-dep-of-std = ['core', 'logpacket/rustc-dep-of-std', 'linked_list_allocator/rustc-dep-of-std', 'arrayvec/rustc-dep-of-std', 'static_assertions/rustc-dep-of-std']

